fix z-index header issue

--- a/main.css
+++ b/main.css
@@ -140,6 +140,7 @@
     position: sticky;
     background: var(--clr-secondary);
     top: 0;
+    z-index: 1;
   }
 }
 
